--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Sprint Challenge - Home</title>
+  <title>James' Sprint Challenge - Home</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
@@ -15,6 +15,19 @@
     <div class="container">
    
         <section class="top-content">
+            <div class="header">
+                <img src="img/lambda-black.png" alt="lambdalogo" id="logo">
+                <nav>
+                    <a href="index.html" class="navsec">Home</a>
+                    <a href="about.html" class="navsec">About</a>
+                    <a href="#" class="navsec">Products</a>
+                    <a href="#" class="navsec">Blog</a>
+                    <a href="#" class="navsec">Contact</a>
+                </nav>
+            </div>
+            <div>
+                <img src="img/jumbo.jpg" alt="busyHighway">
+            </div>
             <div class="text-container">
                 <h2>The Future</h2>
                 <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
@@ -30,16 +43,16 @@
             <h2>Why Did It Have To Be Boxes...</h2>
             
             <div class="boxes">
-                <div class="box">Box 1</div>
-                <div class="box">Box 2</div>
-                <div class="box">Box 3</div>
-                <div class="box">Box 4</div>
-                <div class="box">Box 5</div>
-                <div class="box">Box 6</div>
-                <div class="box">Box 7</div>
-                <div class="box">Box 8</div>
-                <div class="box">Box 9</div>
-                <div class="box">Box 10</div>
+                <div class="box" id="teal">Box 1</div>
+                <div class="box" id="gold">Box 2</div>
+                <div class="box" id="cadetblue">Box 3</div>
+                <div class="box" id="coral">Box 4</div>
+                <div class="box" id="crimson">Box 5</div>
+                <div class="box" id="forestgreen">Box 6</div>
+                <div class="box" id="darkorchid">Box 7</div>
+                <div class="box" id="hotpink">Box 8</div>
+                <div class="box" id="indigo">Box 9</div>
+                <div class="box" id="dodgerblue">Box 10</div>
             </div>
         
         </section>
